# na-online_tools

./: .hgignore  AUTHORS  README.md
src/: CMakeLists.txt  Makefile  ReaderBND.cpp  ReaderBND.h  eeg_sensor_generator.cpp  eeg_sensor_transformator.cpp
tools/: install_dependencies.sh
tools/PackBacker/: README.md  packbacker.py
tools/PackBacker/jobs/: na-online_dependencies.pb
tools/PackBacker/packbacker/: __init__.py  constants.py  errors.py  installer.py  job.py  utils.py
tools/PackBacker/packbacker/installers/: eigen3.py  mnecpp.py
tools/PackBacker/packbacker/pluginloader/: __init__.py
tools/cmake/: FindEigen3.cmake  FindMNE.cmake
